fix: change partniors css for fix layout bug

--- a/query.css
+++ b/query.css
@@ -2,6 +2,17 @@
   .container {
     max-width: 980px;
   }
+  .partniors__items__img {
+    max-width: 200px;
+  }
+
+  .partniors__left {
+    left: 20px;
+  }
+
+  .partniors__right {
+    right: 20px;
+  }
 }
 
 @media (max-width: 980px) {
@@ -53,12 +64,16 @@
     gap: 1.5rem;
   }
 
-  .partniors__btn {
-    display: none;
+  .partniors__items__img {
+    min-width: 80%;
   }
 
-  .partniors__items__img {
-    width: 100%;
+  .partniors__left {
+    left: 10px;
+  }
+
+  .partniors__right {
+    right: 10px;
   }
 }
 
