--- a/style.css
+++ b/style.css
@@ -212,24 +212,32 @@ section h1 {
   overflow: hidden;
 }
 
+.partniors__head {
+  font-size: 2rem;
+  margin-bottom: 5rem;
+}
+
 .partniors__items {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  max-width: 100%;
 }
 
-.parniors__alone {
+.partniors__items__img {
+  flex: 1;
+  min-height: 80px;
+  max-width: 250px;
+}
+
+.partniors__alone {
   display: flex;
   justify-content: center;
 }
 
-.partniors__items__img {
-  max-width: 20%;
-  height: auto;
+.partniors__icon {
+  width: 10px;
 }
-
 .partniors__btn {
   position: absolute;
   top: 50%;
@@ -240,14 +248,17 @@ section h1 {
   align-items: center;
   justify-content: center;
   font-size: 20px;
+  background-color: transparent;
+  border: none;
+  color: #fff;
 }
 
 .partniors__left {
-  left: 10px;
+  left: 150px;
 }
 
 .partniors__right {
-  right: 10px;
+  right: 150px;
 }
 
 .partniors .slider-dots {
